[project]
name = "kchat"
version = "0.1.0"
description = "KAFKA CHAT"
authors = [
    {name = "lsiwh37249", email = "lsiwh37249@gmail.com"},
]

dependencies = [
    "kafka-python>=2.0.2",
    "tqdm>=4.66.5",
    "datetime>=5.5",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.pytest.dev-dependencies]
test = [
    "pytest>=8.3.2"
]


[tool.pytest.ini_options]
pythonpath = "src"

[project.scripts]
kchat-ping = 'kchat.cli:ping'
